// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ReposFilter > should check if when the button is clicked 1`] = `
<div
  class="w-full grid grid-cols-3 gap-2 p-1 sm:grid-cols-5 md:flex md:flex-wrap md:justify-around md:gap-2"
  data-v-b209dafd=""
>
  <button
    class="clear"
    data-v-b209dafd=""
  >
    <span
      data-v-b209dafd=""
    >
      Clear Filter
    </span>
  </button>
  
  <button
    class=""
    data-v-b209dafd=""
    style="--text-color: #ffffff; --bg-color: #1f1f1f;"
    value="Javascript"
  >
    <span
      data-v-b209dafd=""
    >
      Javascript
    </span>
    <span
      data-v-b209dafd=""
    >
      3
    </span>
  </button>
  <button
    class="selected"
    data-v-b209dafd=""
    style="--text-color: #e34c26; --bg-color: #1f1f1f;"
    value="HTML"
  >
    <span
      data-v-b209dafd=""
    >
      HTML
    </span>
    <span
      data-v-b209dafd=""
    >
      2
    </span>
  </button>
  <button
    class=""
    data-v-b209dafd=""
    style="--text-color: #3572A5; --bg-color: #1f1f1f;"
    value="Python"
  >
    <span
      data-v-b209dafd=""
    >
      Python
    </span>
    <span
      data-v-b209dafd=""
    >
      1
    </span>
  </button>
  <button
    class=""
    data-v-b209dafd=""
    style="--text-color: #CC342D; --bg-color: #1f1f1f;"
    value="Ruby"
  >
    <span
      data-v-b209dafd=""
    >
      Ruby
    </span>
    <span
      data-v-b209dafd=""
    >
      1
    </span>
  </button>
  <button
    class=""
    data-v-b209dafd=""
    style="--text-color: #b07219; --bg-color: #1f1f1f;"
    value="Java"
  >
    <span
      data-v-b209dafd=""
    >
      Java
    </span>
    <span
      data-v-b209dafd=""
    >
      1
    </span>
  </button>
  <button
    class=""
    data-v-b209dafd=""
    style="--text-color: #f34b7d; --bg-color: #1f1f1f;"
    value="C++"
  >
    <span
      data-v-b209dafd=""
    >
      C++
    </span>
    <span
      data-v-b209dafd=""
    >
      1
    </span>
  </button>
  <button
    class=""
    data-v-b209dafd=""
    style="--text-color: #ffffff; --bg-color: #1f1f1f;"
    value="Typescript"
  >
    <span
      data-v-b209dafd=""
    >
      Typescript
    </span>
    <span
      data-v-b209dafd=""
    >
      1
    </span>
  </button>
  
</div>
`;

exports[`<ReposFilter > should render correctly 1`] = `
<div
  class="w-full grid grid-cols-3 gap-2 p-1 sm:grid-cols-5 md:flex md:flex-wrap md:justify-around md:gap-2"
  data-v-b209dafd=""
>
  <button
    class="clear"
    data-v-b209dafd=""
  >
    <span
      data-v-b209dafd=""
    >
      Clear Filter
    </span>
  </button>
  
  
</div>
`;

exports[`<ReposFilter > should render with filter 1`] = `
<div
  class="w-full grid grid-cols-3 gap-2 p-1 sm:grid-cols-5 md:flex md:flex-wrap md:justify-around md:gap-2"
  data-v-b209dafd=""
>
  <button
    class="clear"
    data-v-b209dafd=""
  >
    <span
      data-v-b209dafd=""
    >
      Clear Filter
    </span>
  </button>
  
  <button
    class=""
    data-v-b209dafd=""
    style="--text-color: #ffffff; --bg-color: #1f1f1f;"
    value="Javascript"
  >
    <span
      data-v-b209dafd=""
    >
      Javascript
    </span>
    <span
      data-v-b209dafd=""
    >
      3
    </span>
  </button>
  <button
    class=""
    data-v-b209dafd=""
    style="--text-color: #e34c26; --bg-color: #1f1f1f;"
    value="HTML"
  >
    <span
      data-v-b209dafd=""
    >
      HTML
    </span>
    <span
      data-v-b209dafd=""
    >
      2
    </span>
  </button>
  <button
    class=""
    data-v-b209dafd=""
    style="--text-color: #3572A5; --bg-color: #1f1f1f;"
    value="Python"
  >
    <span
      data-v-b209dafd=""
    >
      Python
    </span>
    <span
      data-v-b209dafd=""
    >
      1
    </span>
  </button>
  <button
    class=""
    data-v-b209dafd=""
    style="--text-color: #CC342D; --bg-color: #1f1f1f;"
    value="Ruby"
  >
    <span
      data-v-b209dafd=""
    >
      Ruby
    </span>
    <span
      data-v-b209dafd=""
    >
      1
    </span>
  </button>
  <button
    class=""
    data-v-b209dafd=""
    style="--text-color: #b07219; --bg-color: #1f1f1f;"
    value="Java"
  >
    <span
      data-v-b209dafd=""
    >
      Java
    </span>
    <span
      data-v-b209dafd=""
    >
      1
    </span>
  </button>
  <button
    class=""
    data-v-b209dafd=""
    style="--text-color: #f34b7d; --bg-color: #1f1f1f;"
    value="C++"
  >
    <span
      data-v-b209dafd=""
    >
      C++
    </span>
    <span
      data-v-b209dafd=""
    >
      1
    </span>
  </button>
  <button
    class=""
    data-v-b209dafd=""
    style="--text-color: #ffffff; --bg-color: #1f1f1f;"
    value="Typescript"
  >
    <span
      data-v-b209dafd=""
    >
      Typescript
    </span>
    <span
      data-v-b209dafd=""
    >
      1
    </span>
  </button>
  
</div>
`;
